Fixing modals bottom spacing

--- a/quizapp_client/www/css/style.css
+++ b/quizapp_client/www/css/style.css
@@ -213,3 +213,13 @@
 .ss{
   margin-left: inherit;
 }
+
+.modalStyle {
+  min-height: 0;
+  width: 80%;
+  height: 60%;
+  top: 20%;
+  bottom: 20%;
+  right: 10%;
+  left: 10%;
+}
